# strictyaml

./: .gitattributes  .gitignore  CHANGELOG.md  FAQ.rst  MANIFEST.in  README.md  README.rst  VERSION  key.sh  pyproject.toml  run.sh  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: any.rst  basic-scalar-validation.rst  boolean-validation.rst  boolean.rst  cli.md  comma-separated.rst  commaseparated.rst  datetime-validation.rst  datetime.rst  decimal.rst  dirtemplate.yml  disallow.rst  duplicate-keys.rst  duplicatekeys.rst  email-and-url-validators.rst  empty-validation-emptynone-emptydict-emptylist.rst  empty-validation.rst  empty.rst  enum-validation-enum.rst  enum-validation.rst  enum.rst  features-removed.md  features-removed.rst  fixed-length-sequence-validation.rst  fixed-length-sequences-fixedseq.rst  fixed-sequence.rst  float.rst  floats.rst  index.jinja2  index.md  index.md.jinja2  index.rst  lint.rst  map-pattern.rst  map.rst  mappattern.rst  mapping-representation.rst  nested-map.rst  nested-mapping-validation.rst  new-faq.md  (+36 more)
hitch/: Dockerfile-hitch  README.md  README.rst  TODO.txt  any.story  asroot.sh  boolean.story  build-yaml-document-from-scratch.story  codetemplates.yml  commaseparated.story  create-document.story  datetime.story  debugrequirements.txt  decimal.story  defer-validation.story  dirty-load.story  disallow.story  doctemplates.yml  duplicatekeys.story  email-url.story  empty.story  engine.py  enum-with-item-validation.story  enum.story  envirotest.py  fixed-sequence.story  float.story  funny.story.invalid  glossary.yml  (+34 more)
(+218 files in other folders)
